# Adv_Ani_Heading

./: CMakeLists.txt  Cloth.h  Controller.cpp  Controller.h  MotionBlender.cpp  MotionBlender.h  MotionGraph.cpp  MotionGraph.h  MyWindow.cpp  MyWindow.h  README.md  SkelGen.cpp  SkelGen.h  ThrowingBall.cpp  ThrowingBall.h  bvh.cpp  bvh.h  main.cpp
FastMassSpring/: CMakeLists.txt
FastMassSpring/render/: .SimulationWindow.cpp.swp  SimulationWindow.cpp  SimulationWindow.h
data/: hubo.skel
motion/: 16_01_jump.bvh  16_02_jump.bvh  16_03_high jump.bvh  16_04_high jump.bvh  16_05_forward jump.bvh  16_06_forward jump.bvh  16_07_forward jump.bvh  16_08_run&jog, sudden stop.bvh  16_09_forward jump.bvh  16_10_forward jump.bvh  16_12_walk, veer left.bvh  16_13_walk, veer right.bvh  16_14_walk, veer right.bvh  16_15_walk.bvh  16_16_walk.bvh  16_17_walk, 90-degree left turn.bvh  16_18_walk, 90-degree left turn.bvh  16_19_walk, 90-degree right turn.bvh  16_20_walk, 90-degree right turn.bvh  16_21_walk.bvh  16_22_walk.bvh  16_23_walk, veer left.bvh  16_24_walk, veer left.bvh  16_25_walk, veer right.bvh  16_26_walk, veer right.bvh  16_27_walk, 90-degree left turn.bvh  16_28_walk, 90-degree left turn.bvh  16_29_walk, 90-degree right turn.bvh  16_30_walk, 90-degree right turn.bvh  16_31_walk.bvh  16_32_walk.bvh  16_33_slow walk, stop.bvh  16_34_slow walk, stop.bvh  16_35_run&jog.bvh  16_36_run&jog.bvh  16_37_run&jog, veer left.bvh  16_38_run&jog, veer left.bvh  16_39_run&jog, veer right.bvh  16_40_run&jog, veer right.bvh  16_41_run&jog, 90-degree left turn.bvh  (+17 more)
(+8 files in other folders)
